objects/enway__RecordTypeMappingItem__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>enway__Api_Name__c</fullName>
        <label>Api Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enway__Lead_Record_Type_Id__c</fullName>
        <label>Lead Record Type Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enway__SObject_Record_Type_Id__c</fullName>
        <label>SObject Record Type Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Record Type Mapping Item</label>
</CustomObject>